# cashier

./: .gitignore  README.md  compose.yml
backend/: Cargo.toml  Rocket.toml
backend/src/: db.rs  guards.rs  main.rs
backend/src/data/: auth.rs  customer.rs  employee.rs  mod.rs  product.rs  raw_material.rs  shop.rs  transaction.rs
backend/src/routes/: auth.rs  customer.rs  employee.rs  invoice.rs  mod.rs  product.rs  raw_material.rs  shop.rs  transaction.rs
config/: backend.env
containers/: backend.dockerfile
database/: 00_schema.sql  10_seed.sql  schema.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: .prettierrc  App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: auth.rs  config.rs  main.rs  printer.rs
frontend/src/components/: NumberInput.tsx
frontend/src/hooks/: locale.ts  native.ts  req.ts  settings.ts
frontend/src/icons/: Barcodecanner.tsx
frontend/src/layouts/: ConfigLayout.tsx  DashboardLayout.tsx  RootLayout.tsx
frontend/src/locale/: fr.json
frontend/src/models/: account.ts  cashreg.ts  customer.ts  product.ts  shop.ts
frontend/src/routes/: HardwareConfig.tsx  Login.tsx
frontend/src/routes/config/: Access.tsx  HardwareConfig.tsx  Login.tsx  ProfileSelector.tsx
frontend/src/routes/dashboard/: CashRegister.tsx  Customer.tsx  CustomerAdd.tsx  Locaux.tsx  Matière_Première.tsx  Product.tsx  ProductAdd.tsx  RawMaterial.tsx  Session.tsx  (+4 more)
frontend/src/theme/: ThemeRegistry.tsx  theme.ts
frontend/src/utils/: api.ts  config.ts  format.ts  hardware.ts
scripts/: backend.sh
