[package]
name = "cashier-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
rocket ={ version = "0.5.0", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "time", "chrono"] }
