[package]
name = "cashier-frontend"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
standard_paths = "2.1.0"
toml = "0.8.12"
printers = "2.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
